RESOLVED FIXED176431
[Win] WebCore failed to build, InbandTextTrackPrivateAVF: base class undefined.
https://bugs.webkit.org/show_bug.cgi?id=176431
Summary [Win] WebCore failed to build, InbandTextTrackPrivateAVF: base class undefined.
Per Arne Vollan
Reported 2017-09-05 16:29:34 PDT
This happens only when building from the .proj project files. webcore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateAVCF.h(37): error C2504: 'InbandTextTrackPrivateAVF': base class undefined (compiling source file WebCore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateAVCF.cpp).
Attachments
Patch (13.37 KB, patch)
2017-09-05 16:39 PDT, Per Arne Vollan
achristensen: review+
Patch (13.21 KB, patch)
2017-09-06 08:40 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-09-05 16:30:41 PDT
Per Arne Vollan
Comment 2 2017-09-05 16:39:52 PDT
Alex Christensen
Comment 3 2017-09-05 19:03:10 PDT
Comment on attachment 319954 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319954&action=review > Source/WebCore/config.h:32 > +#if PLATFORM(WIN) && !USE(WINGDI) !USE(WINGDI) is unnecessary. The WinCE port of yesteryear used that. > Source/WebCore/config.h:112 > +// FIXME: Move this to JavaScriptCore/wtf/Platform.h, which is where we define USE_AVFOUNDATION on the Mac. We should just define USE_AVFOUNDATION in WebCore on Mac. We've done it all wrong if JavaScriptCore depends on AVFoundation.
Per Arne Vollan
Comment 4 2017-09-06 08:40:12 PDT
Per Arne Vollan
Comment 5 2017-09-06 10:05:43 PDT
Thanks for reviewing!
Per Arne Vollan
Comment 6 2017-09-06 13:11:25 PDT
Note You need to log in before you can comment on or make changes to this bug.