[Win] WebCore failed to build, InbandTextTrackPrivateAVF: base class undefined. https://bugs.webkit.org/show_bug.cgi?id=176431

Reviewed by Alex Christensen.

Source/WebCore:

AVFoundation header detection should be done in WebCore because of build dependencies.

No new tests, covered by existing tests.

* AVFoundationSupport.py: Copied from Source/WTF/AVFoundationSupport.py.
* PlatformWin.cmake:
* config.h:
* platform/graphics/ca/win/PlatformCALayerWin.cpp:
* platform/graphics/ca/win/PlatformCALayerWinInternal.cpp:

Source/WTF:

AVFoundation header detection should be done in WebCore because of build dependencies.

* AVFoundationSupport.py: Removed.
* wtf/Platform.h:
* wtf/PlatformWin.cmake:


Canonical link: https://commits.webkit.org/193054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221693 268f45cc-cd09-0410-ab3c-d52691b4dbfc