Source/WebCore/platform/graphics/ca/win/PlatformCALayerWinInternal.cpp
@@ -34,8 +34,8 @@
 #include "PlatformCALayer.h"
 #include "TileController.h"
 #include "TiledBacking.h"
+#include "WebCoreHeaderDetection.h"
 #include <QuartzCore/CACFLayer.h>
-#include <wtf/AVFoundationHeaderDetection.h>
 #include <wtf/MainThread.h>
 
 using namespace std;
